getting code to semi work, minus colors

--- a/index.html
+++ b/index.html
@@ -32,52 +32,52 @@
     <div class="container">
       <div class="form-row">
           <label class="col-1 text-wrap">8AM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea1" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
       <div class="form-row">
           <label class="col-1 text-wrap">9AM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea2" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
       <div class="form-row">
           <label class="col-1 text-wrap">10AM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea3" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
       <div class="form-row">
           <label class="col-1 text-wrap">11AM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea4" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
       <div class="form-row">
           <label class="col-1 text-wrap">12PM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea5" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
       <div class="form-row">
           <label class="col-1 text-wrap">1PM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea6" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
       <div class="form-row">
           <label class="col-1 text-wrap">2PM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea7" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
         <div class="form-row">
           <label class="col-1 text-wrap">3PM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea8" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
       <div class="form-row">
           <label class="col-1 text-wrap">4PM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea9" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
         <div class="form-row">
           <label class="col-1 text-wrap">5PM</label>
-          <textarea class="col-8 form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="col-8 form-control" id="textArea10" rows="3"></textarea>
           <button class="col-2 btn btn-secondary"><i style='font-size:48px' class='far'>&#xf0c7;</i></button>
         </div>
       
